--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "node index.js",
     "dev": "nodemon src/app.js",
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "./node_modules/.bin/netlify-lambda build src"
+    "start": "node src/api.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +18,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22",
-    "serverless-http": "^3.2.0"
+    "nodemon": "^2.0.22"
   }
 }
