--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "node index.js",
-    "dev": "nodemon src/app.js",
-    "start": "node src/api.js"
+    "dev": "node index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
